Implement users GET API
